Moved UI elements to fix spacing
- Spacing under the power buttons fixed, previously at certain aspect ratios you would see a 1-2 pixel gap
- Also at certain aspect ratios you would see a 1px gap under the hide overlay button

--- a/plugin/css/video.css
+++ b/plugin/css/video.css
@@ -438,7 +438,7 @@
   width: 24.2%;
   height: 7.8152753%;
   position: absolute;
-  bottom: 0;
+  bottom: -2px; /* Odd aspect ratios sometimes cause the buttons to sit a big higher, 2px below the screen for good measure */
   left: 53.2%;
   z-index: 10050;
   border-top-left-radius: 2px;
@@ -919,7 +919,7 @@
   width: 6%;
   height: 10%;
   position: absolute;
-  top: 66%;
+  top: calc(66% + 1px); /* 1px to make up for odd aspect ratios */
   right: 0%;
   background: rgba(0,0,0, 0.9);
   border-top-left-radius: 2px;
